--- a/app/src/main/res/layout/fragment_member.xml
+++ b/app/src/main/res/layout/fragment_member.xml
@@ -9,6 +9,10 @@
 
     <ListView
             android:id="@+id/member_list"
+            android:padding="3dp"
+            android:divider="@color/back1"
+            android:dividerHeight="3dp"
+            android:background="@color/back1"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
