--- a/app/src/main/res/layout/fragment_member_item.xml
+++ b/app/src/main/res/layout/fragment_member_item.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="horizontal">
+              android:padding="5dp"
+              android:orientation="horizontal"
+              android:background="@drawable/item_corner_bg">
     <TextView android:id="@+id/member_name"
               android:textSize="30sp"
               android:layout_width="wrap_content"
