--- a/app/src/main/res/layout/fragment_number_base.xml
+++ b/app/src/main/res/layout/fragment_number_base.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:padding="5dp"
               android:orientation="vertical"
               android:background="@drawable/item_corner_bg" >
 
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="50dp"
+                  android:background="@color/back4"
                   android:orientation="horizontal">
         <TextView android:id="@+id/number_name"
                   android:textSize="30sp"
@@ -20,13 +20,11 @@
                   android:layout_height="match_parent" />
     </LinearLayout>
 
-    <GridView android:id="@+id/number_grid"
+    <com.example.calculatorplus.view.NoScrollGridView android:id="@+id/number_grid"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center"
               android:columnWidth="60dp"
-              android:horizontalSpacing="5dp"
-              android:verticalSpacing="5dp"
               android:numColumns="auto_fit"
               android:stretchMode="columnWidth" />
 </LinearLayout>
