--- a/app/src/main/res/layout/fragment_result_item.xml
+++ b/app/src/main/res/layout/fragment_result_item.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/back4"
+              android:background="@drawable/item_bg"
               android:orientation="vertical">
     <TextView android:id="@+id/result_item"
+              android:textSize="30sp"
               android:layout_width="match_parent"
               android:layout_height="45dp"
               android:gravity="center"/>
