--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,6 +24,12 @@
             tools:layout="@layout/fragment_member"/>
 
     <fragment
+            android:id="@+id/nav_member_edit"
+            android:name="com.example.calculatorplus.ui.member.MemberEditFragment"
+            android:label="@string/menu_member_edit"
+            tools:layout="@layout/fragment_member_edit"/>
+
+    <fragment
             android:id="@+id/nav_home"
             android:name="com.example.calculatorplus.ui.home.HomeFragment"
             android:label="@string/menu_home"
