--- a/app/src/main/res/layout/fragment_member_edit.xml
+++ b/app/src/main/res/layout/fragment_member_edit.xml
@@ -9,12 +9,17 @@
     <LinearLayout android:gravity="center"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
-        <TextView android:text="名字"
+        <TextView android:id="@+id/member_edit_avatar"
+                  android:text="名字"
                   android:textSize="50dp"
                   android:gravity="center"
                   android:layout_width="100dp"
                   android:layout_height="100dp" />
     </LinearLayout>
+    <EditText android:id="@+id/member_edit_id"
+              android:enabled="false"
+              android:layout_width="0dp"
+              android:layout_height="0dp" />
     <LinearLayout android:gravity="center"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
