--- a/app/src/main/res/layout/fragment_member_item.xml
+++ b/app/src/main/res/layout/fragment_member_item.xml
@@ -2,21 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:padding="5dp"
               android:orientation="horizontal"
               android:background="@drawable/item_corner_bg">
+    <LinearLayout android:layout_width="wrap_content"
+                  android:layout_height="wrap_content">
+        <TextView android:id="@+id/member_avatar"
+                  android:textSize="60sp"
+                  android:gravity="center"
+                  android:layout_width="80dp"
+                  android:layout_height="80dp"/>
+    </LinearLayout>
     <TextView android:id="@+id/member_name"
               android:textSize="30sp"
-              android:layout_width="wrap_content"
+              android:gravity="center"
+              android:layout_width="100dp"
               android:layout_height="80dp"/>
     <TextView android:id="@+id/member_phone"
               android:textSize="30sp"
-              android:layout_marginLeft="10dp"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"/>
+              android:gravity="center"
+              android:layout_width="200dp"
+              android:layout_height="80dp"/>
     <TextView android:id="@+id/member_state"
               android:textSize="30sp"
-              android:layout_marginLeft="10dp"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"/>
+              android:gravity="center"
+              android:layout_width="20dp"
+              android:layout_height="80dp"/>
 </LinearLayout>
