--- a/app/src/main/res/layout/fragment_number_base.xml
+++ b/app/src/main/res/layout/fragment_number_base.xml
@@ -11,10 +11,13 @@
                   android:orientation="horizontal">
         <TextView android:id="@+id/number_name"
                   android:textSize="30sp"
-                  android:layout_width="150dp"
+                  android:layout_width="120dp"
                   android:layout_height="match_parent" />
         <TextView android:id="@+id/number_totalMoney"
-                  android:gravity="right"
+                  android:textSize="30sp"
+                  android:layout_width="120dp"
+                  android:layout_height="match_parent" />
+        <TextView android:id="@+id/number_time"
                   android:textSize="30sp"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent" />
@@ -24,7 +27,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center"
-              android:columnWidth="60dp"
+              android:columnWidth="80dp"
               android:numColumns="auto_fit"
               android:stretchMode="columnWidth" />
 </LinearLayout>
