--- a/app/src/main/res/layout/fragment_number_base_item.xml
+++ b/app/src/main/res/layout/fragment_number_base_item.xml
@@ -6,11 +6,12 @@
               android:orientation="vertical">
     <TextView android:id="@+id/number_value"
               android:textSize="50sp"
-              android:layout_width="60dp"
+              android:gravity="center"
+              android:layout_width="80dp"
               android:layout_height="60dp"/>
     <TextView android:id="@+id/number_money"
               android:textSize="20sp"
               android:gravity="right"
-              android:layout_width="60dp"
+              android:layout_width="80dp"
               android:layout_height="wrap_content"/>
 </LinearLayout>
