--- a/app/src/main/res/layout/fragment_number_edit.xml
+++ b/app/src/main/res/layout/fragment_number_edit.xml
@@ -5,6 +5,16 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               tools:context=".ui.number.NumberEditFragment">
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="350dp">
+        <GridView android:id="@+id/number_edit_grid"
+                  android:gravity="center"
+                  android:columnWidth="80dp"
+                  android:numColumns="auto_fit"
+                  android:stretchMode="columnWidth"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent" />
+    </LinearLayout>
     <LinearLayout android:padding="5dp"
                   android:gravity="center"
                   android:layout_width="match_parent"
@@ -22,7 +32,8 @@
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:orientation="vertical">
-            <Button android:text="解析"
+            <Button android:id="@+id/number_parse"
+                    android:text="解析"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             <Button android:text="清空"
