--- a/app/src/main/res/layout/fragment_number_edit_item.xml
+++ b/app/src/main/res/layout/fragment_number_edit_item.xml
@@ -3,7 +3,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <TextView android:text="确认删除?"
+    <TextView android:text="修改"
               android:gravity="center"
               android:layout_width="match_parent"
               android:layout_height="50sp" />
@@ -11,23 +11,35 @@
                   android:layout_marginHorizontal="20dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
-        <TextView android:text="请输入密码"
-                  android:layout_width="80dp"
+        <TextView android:text="数字"
+                  android:layout_width="40dp"
                   android:layout_height="wrap_content" />
-        <EditText android:id="@+id/member_del_pwd"
-                  android:inputType="textPassword"
+        <EditText android:id="@+id/number_edit_number"
+                  android:inputType="number"
+                  android:layout_width="220dp"
+                  android:layout_height="wrap_content" />
+    </LinearLayout>
+    <LinearLayout android:gravity="center"
+                  android:layout_marginHorizontal="20dp"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+        <TextView android:text="金额"
+                  android:layout_width="40dp"
+                  android:layout_height="wrap_content" />
+        <EditText android:id="@+id/number_edit_money"
+                  android:inputType="number"
                   android:layout_width="220dp"
                   android:layout_height="wrap_content" />
     </LinearLayout>
     <LinearLayout android:gravity="center_horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
-        <Button android:id="@+id/member_del_ok"
+        <Button android:id="@+id/number_edit_ok"
                 android:text="确认"
                 android:layout_marginRight="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-        <Button android:id="@+id/member_del_cancel"
+        <Button android:id="@+id/number_edit_cancel"
                 android:text="取消"
                 android:layout_marginLeft="20dp"
                 android:layout_width="wrap_content"
