--- a/app/src/main/res/layout/fragment_number_base.xml
+++ b/app/src/main/res/layout/fragment_number_base.xml
@@ -3,6 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
+              android:descendantFocusability="blocksDescendants"
               android:background="@drawable/item_corner_bg" >
 
     <LinearLayout android:layout_width="match_parent"
