--- a/app/src/main/res/layout/fragment_number_edit.xml
+++ b/app/src/main/res/layout/fragment_number_edit.xml
@@ -36,7 +36,8 @@
                     android:text="解析"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-            <Button android:text="清空"
+            <Button android:id="@+id/number_clear"
+                    android:text="清空"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
         </LinearLayout>
