--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,8 @@
     <color name="back2">#FFE4E7ED</color>
     <color name="back3">#FFEBEEF5</color>
     <color name="back4">#FFF2F6FC</color>
+
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
 </resources>
